MangoBajito/tests/Lenguajes_II/Declaracion/valid/04-higuerote.mng
# Test 04: Tipo higuerote
culito decl0: higuerote = "hola";
se_prende(){
	jeva decl1: higuerote = " mundo";
	culito decl2: higuerote = decl0;
	culito decl3: higuerote;
	decl3 = decl1;
};